--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,1 +1,46 @@
+@software{FourierFlows,
+  author       = {Constantinou, N. C. and
+                  Wagner, L. C. and
+                  Palóczy, A.},
+  title        = {FourierFlows/FourierFlows.jl: v0.6.17},
+  year         = {2021},
+  publisher    = {Zenodo},
+  version      = {v0.6.17},
+  doi          = {10.5281/zenodo.4686348},
+  url          = {https://doi.org/10.5281/zenodo.4686348}
+}
 
+@article{Oceananigans,
+  title={Oceananigans.jl: {Fast} and friendly geophysical fluid dynamics on {GPUs}},
+  author={Ramadhan, Ali and
+          Wagner, Gregory LeClaire and
+          Hill, Chris and
+          Campin, Jean-Michel and
+          Churavy, Valentin and
+          Besard, Tim and
+          Souza, Andre and
+          Edelman, Alan and
+          Ferrari, Raffaele and
+          Marshall, John},
+  journal={Journal of Open Source Software},
+  volume={5},
+  number={53},
+  pages={2018},
+  year={2020},
+	doi={10.21105/joss.02018}
+}
+
+@article{GeophysicalFlowsJOSS,
+year = {2021},
+volume = {6},
+number = {60},
+pages = {3053},
+author = {Navid C. Constantinou and
+          Gregory LeClaire Wagner and
+          Lia Siegelman and
+          Brodie C. Pearson and
+          Andr{{\'e}} Pal{{\'o}}czy},
+title = {GeophysicalFlows.jl: Solvers for geophysical fluid dynamics problems in periodic domains on CPUs \& GPUs},
+journal = {Journal of Open Source Software},
+doi = {https://doi.org/10.21105/joss.03053}
+}
