--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -44,3 +44,34 @@
   journal = 	{Journal of Open Source Software},
   doi =		{https://doi.org/10.21105/joss.03053}
 }
+
+@article{Crowe_Johnson_23,
+  author =    {Crowe, Matthew N. and
+               Johnson, Edward R.},
+  title =     {The evolution of surface quasi-geostrophic modons on sloping topography},
+  journal   = {Journal of Fluid Mechanics},
+  year      = {2023},
+  volume    = {970},
+  pages     = {A10}
+}
+
+@article{Crowe_Johnson_2024,
+  title =    {Modon solutions in an {N}-layer quasi-geostrophic model},
+  volume =   {994},
+  journal =  {Journal of Fluid Mechanics},
+  author =   {Crowe, Matthew N. and
+              Johnson, Edward R.},
+  year =     {2024},
+  pages =    {R1}
+}
+
+@Article{Johnson_Crowe_23,
+author         = {Johnson, Edward R. and
+                  Crowe, Matthew N.},
+journal        = {Journal of Fluid Mechanics},
+title          = {Oceanic dipoles in a surface quasi-geostrophic model},
+year           = {2023},
+volume         = {958},
+pages          = {R2},
+}
+
