--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -66,12 +66,23 @@
 }
 
 @Article{Johnson_Crowe_23,
-author         = {Johnson, Edward R. and
+  author         = {Johnson, Edward R. and
                   Crowe, Matthew N.},
-journal        = {Journal of Fluid Mechanics},
-title          = {Oceanic dipoles in a surface quasi-geostrophic model},
-year           = {2023},
-volume         = {958},
-pages          = {R2},
+  journal        = {Journal of Fluid Mechanics},
+  title          = {Oceanic dipoles in a surface quasi-geostrophic model},
+  year           = {2023},
+  volume         = {958},
+  pages          = {R2},
 }
 
+@Article{NiZWH20,
+  author    = {Ni, Q. and
+               Zhai, X. and
+               Wang, G. and
+               Hughes, C. W.},
+  title     = {Widespread Mesoscale Dipoles in the Global Ocean},
+  pages     = {e2020JC016479},
+  volume    = {125},
+  journal   = {Journal of Geophysical Research: Oceans},
+  year      = {2020},
+}
