--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -30,7 +30,7 @@
   doi =		{10.21105/joss.02018}
 }
 
-@article{GeophysicalFlowsJOSS,
+@article{GeophysicalFlows,
   year = 	{2021},
   volume = 	{6},
   number = 	{60},
@@ -85,4 +85,14 @@
   volume    = {125},
   journal   = {Journal of Geophysical Research: Oceans},
   year      = {2020},
+}
+
+@Article{NycanderI90,
+  author  = {Nycander, J. and
+             Isichenko, M. B.},
+  title   = {Motion of dipole vortices in a weakly inhomogeneous medium and related convective transport},
+  pages   = {2042-2047},
+  volume  = {2},
+  journal = {Physics of Fluids},
+  year    = {1990},
 }
