--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,17 @@
+@article{Bezanson2017,
+  title   = {Julia: {A} fresh approach to numerical computing},
+  author  = {Bezanson, Jeff and
+             Edelman, Alan and
+             Karpinski, Stefan and
+             Shah, Viral B.},
+  journal = {SIAM Review},
+  volume  = {59},
+  number  = {1},
+  pages   = {65--98},
+  year    = {2017},
+  doi     = {10.1137/141000671}
+}
+
 @software{FourierFlows,
   author       = {Constantinou, N. C. and
                   Wagner, L. C. and
