--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -81,7 +81,7 @@
 
 @Article{Johnson_Crowe_23,
   author         = {Johnson, Edward R. and
-                  Crowe, Matthew N.},
+                    Crowe, Matthew N.},
   journal        = {Journal of Fluid Mechanics},
   title          = {Oceanic dipoles in a surface quasi-geostrophic model},
   year           = {2023},
@@ -109,4 +109,37 @@
   volume  = {2},
   journal = {Physics of Fluids},
   year    = {1990},
+}
+
+@article{Davies_et_al,
+  author  = {Davies, Jack and
+             Sutyrin, Georgi G. and
+             Crowe, Matthew N. and
+             Berloff, Pavel S.},
+  title   = {Deformation and destruction of north-eastward drifting dipoles},
+  journal = {Physics of Fluids},
+  volume  = {35},
+  number  = {11},
+  pages   = {116601},
+  year    = {2023},
+}
+
+@article {mcwilliams_1980,
+  author   = {McWilliams, J. C.},
+  title    = {An application of equivalent modons to atmospheric blocking},
+  journal  = {Dynamics of Atmospheres and Oceans},
+  year     = {1980},
+  volume   = {5},
+  pages    = {43-66}
+}
+
+@article{rostami_zeitlin_2021,
+  author   = {M. Rostami and
+              V. Zeitlin},
+  title    = {Eastward-moving equatorial modons in moist-convective shallow-water models},
+  journal  = {Geophysical and Astrophysical Fluid Dynamics},
+  volume   = {115},
+  number   = {3},
+  pages    = {345-367},
+  year     = {2021},
 }
