--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -143,3 +143,26 @@
   pages    = {345-367},
   year     = {2021},
 }
+
+@article{Dedalus,
+  title = {Dedalus: {A} flexible framework for numerical simulations with spectral methods},
+  author = {Burns, K. J. and Vasil, G. M. and Oishi, J. S. and Lecoanet, D. and Brown, B. P.},
+  journal = {Physical Review Research},
+  volume = {2},
+  issue = {2},
+  pages = {023068},
+  numpages = {39},
+  year = {2020},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevResearch.2.023068}
+}
+
+@misc{QGDipolesMat,
+  author       = {Matthew N. Crowe},
+  title        = {QGDipoles.m},
+  year         = {2024},
+  publisher    = {GitHub},
+  journal      = {GitHub repository},
+  url          = {https://github.com/mncrowe/QGDipoles.m}
+}
+
