Update paper.bib with Crowe&Sutyrin

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -166,3 +166,12 @@
   url          = {https://github.com/mncrowe/QGDipoles.m}
 }
 
+@misc{CroweSutyrin,
+      title={Symmetry breaking of two-layer eastward propagating dipoles}, 
+      author={Matthew N. Crowe and Georgi G. Sutyrin},
+      year={2024},
+      eprint={2410.14402},
+      archivePrefix={arXiv},
+      primaryClass={physics.flu-dyn},
+      url={https://arxiv.org/abs/2410.14402}, 
+}
